package modelo.objetos;

/**
 * Tipo de cerradura que puede abrir una llave.
 */
public enum TipoLlave {
    PUERTA,
    COFRE
}
