@startuml
title modelo.objetos

skinparam classAttributeIconSize 0
skinparam shadowing false

package "modelo.objetos" #FFFFFF {

  class Objeto <<abstract>> {
    - String id
    - String nombre
    - String descripcion
    ..
    + boolean esEquipable()
    + boolean esConsumible()
  }

  class Pocion {
    - CURACION_BASE = 25
    - int puntosCuracion
    ..
    + boolean usarSobre(Jugador j)
  }

  class Arma <<abstract>> {
    - int bonificacionAtaque
  }

  class Espada {
    - ATAQUE_EXTRA = 12
  }

  class Arco {
    - ATAQUE_EXTRA = 7
  }

  class Escudo {
    - DEFENSA_EXTRA = 5
    - int bonificacionDefensa
  }

  class Llave {
    - TipoLlave tipoLlave
    - String codigoCerradura
  }

  enum TipoLlave {
    PUERTA
    COFRE
  }

  Pocion --|> Objeto
  Arma --|> Objeto
  Espada --|> Arma
  Arco --|> Arma
  Escudo --|> Objeto
  Llave --|> Objeto
  Llave --> TipoLlave
}
@enduml
